src/default.css
/* ... */
.Attacher .attach-row-remove:hover {
  background-color: #b71c1c;
}
.Attacher .attach-controls {
  display: flex;
  flex-direction: row;
  gap: 1em;
}
.Attacher .attach-controls .attach-add-button {
  padding: 0.5em 1em;
  cursor: pointer;
  flex-grow: 2;
}

.animate-entrance {
  animation: slideFadeIn 0.25s ease-out forwards;
  transform-origin: top;
  overflow: hidden /*prevent content bleeding during expansion*/;
}
.animate-exit {
  animation: slideFadeOut 0.25s ease-in forwards;
  transform-origin: top;
  overflow: hidden;
}
@keyframes slideFadeIn {
  0% {
    opacity: 0;
    transform: translateY(-1em/*must match slideFadeOut*/);
    max-height: 0;
  }
  100% {
    opacity: 1;
    transform: translateY(0);
    max-height: 100em /*a value safely larger than the widget*/;
  }
}
@keyframes slideFadeOut {
  0% {
    opacity: 1;
    transform: translateY(0);
    max-height: 100em /*must match slideFadeIn*/;
  }
  100% {
    opacity: 0;
    transform: translateY(-1em/*must match slideFadeIn*/);
    max-height: 0;
    padding-top: 0;
    padding-bottom: 0;
    margin-top: 0;
    margin-bottom: 0;
  }
}

/* Objects in the "desktoponly" class are invisible on mobile */
@media screen and (max-width: 600px) {
  .desktoponly {
    display: none;
  }
}
/* Float sidebars to the right of the main content only if there's room. */
@media screen and (min-width: 600px) {
  .sidebar {
    float: right;
    max-width: 33%;
    margin-left: 1em;
  }
}
/* Objects in the "wideonly" class are invisible only on wide-screen desktops */
@media screen and (max-width: 1200px) {
  .wideonly {
    display: none;
  }
}

